fix issues on firefox, fix ui issues & add server uptime

--- a/static/styles.css
+++ b/static/styles.css
@@ -4,7 +4,8 @@
 }
 
 :root {
-    --background: rgb(10, 10, 10);
+    --bg-dark: rgb(10, 10, 10);
+    --bg: rgb(30, 30, 30);
     --accent: rgb(20, 20, 20);
     --theme-color: rgb(85,135,105);
     --theme-color-alt: rgb(35,75,55);
@@ -26,7 +27,7 @@ html {
 body {
     padding: 0px;
     margin: 0px;
-    background: var(--background);
+    background: var(--bg-dark);
 
     display: flex;
     flex-direction: column;
@@ -75,7 +76,7 @@ p {
 
     height: calc(100vh + var(--fade-length));
 
-    background-color: var(--background);
+    background-color: var(--bg-dark);
 
     --bgBlurPosX: 0px;
     --bgBlurPosY: 0px;
@@ -88,7 +89,7 @@ p {
     height: calc(100vh + var(--fade-length));
     position: absolute;
     top: 0; left: 0;
-    background: radial-gradient(circle 95vw, var(--theme-color), var(--background));
+    background: radial-gradient(circle 95vw, var(--theme-color), var(--bg-dark));
     background-repeat: no-repeat;
     background-size: 400vw 400vh;
 
@@ -108,12 +109,15 @@ p {
     left: 0px;
     right: 0px;
     bottom: 0px;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0), var(--background));
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0), var(--bg-dark));
     z-index: 2;
 }
 
 .chips {
     display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
     flex-direction: row;
     margin-bottom: 10px;
 }
@@ -216,6 +220,8 @@ p {
 .card {
     position: relative;
     width: 75%;
+    max-width: 980px;
+    min-width: 490px;
     height: 300px;
     background: var(--accent);
 
@@ -302,13 +308,17 @@ p {
 
 .chip {
     display: flex;
-    height: 20px;
     border-radius: 1rem;
-    background-color: red;
+    background-color: var(--bg);
     margin: 0px;
     margin-right: 5px;
     padding-left: 10px;
     padding-right: 10px;
+    align-self: center;
+    justify-self: center;
+    text-align: center;
+    line-height: 150%;
+    font-size: 14px;
 }
 
 .body-content {
@@ -317,7 +327,7 @@ p {
     left: 0px;
     width: 100vw;
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
     align-items: center;
     z-index: 1000;
     perspective: 5500px;
@@ -326,18 +336,16 @@ p {
 
 .footer {
     position: relative;
+    display: flex;
+    flex-direction: column;
 
     width: 100vw;
     padding: 0px;
     margin: 0px;
     margin-top: 150px;
 
-    background: var(--accent);
 
     color: #dfdfdf;
-
-    display: flex;
-    flex-direction: column;
 
     font-size: 10px;
 
@@ -346,10 +354,9 @@ p {
 
     height: 150px;
 
-    box-shadow: 0px -20px 40px var(--theme-color);
-
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
+    .chip {
+        line-height: 200%;
+    }
 }
 
 .footer a {
